# hashmind-skill

./: .gitignore  LICENSE  MANIFEST.in  PUBLISH_SOP.md  README.md  package.json  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: publish.yml
hashmind_skill/: SKILL.md  __init__.py  cli.py
skills/hashmind/: SKILL.md
