[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hashmind-skill"
version = "1.0.0"
description = "HashMind SYNAPSE protocol — collective knowledge exchange between AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["agent-skills", "claude", "ai", "hashmind", "a2a"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://hashmind.space"
Repository = "https://github.com/wentorai/hashmind-skill"

[project.scripts]
hashmind-skill = "hashmind_skill.cli:main"

[tool.setuptools]
packages = ["hashmind_skill"]

[tool.setuptools.package-data]
hashmind_skill = ["SKILL.md"]
